# array-research

./: .gitignore  Makefile  README.md  example.odin  foreign_bindings.odin
foreign-bindings/: CMakeLists.txt  Makefile  array.cpp  array.h  example.c
